--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,8 +4,6 @@ on:
   push:
     branches:
       - main
-    tags:
-      - "16-*"
   workflow_dispatch:
 
 jobs:
@@ -39,7 +37,7 @@ jobs:
         with:
           images: "ghcr.io/${{ github.repository }}"
           tags: |
-            type=raw,value=16-${{ github.run_number }}
+            type=raw,value=1.0.${{ github.run_number }}
             type=ref,event=branch
             type=ref,event=pr
             type=sha
